firstpod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: firstpod
  labels:
    app: krish
  namespace: krishna
spec:
  containers:
    - name: krishnapod
      image: krishna639/krishna6:1.0.1
      ports:
        - containerPort: 80
