firstnodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: firstnodeport
  namespace: krishna
spec:
  type: NodePort
  selector:
    app: replicationcon
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32410
