mongodbservice.yaml
apiVersion: v1
kind: Service
metadata:
   name: mongosvc
   namespace: krishna
spec:
  selector:
    app: volumecon
  ports:
    - port: 27017
      targetPort: 27017
