nfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfsservice
  namespace: krishna
spec:
  selector:
    app: nfsvolume
  ports:
    - port: 27017
      targetPort: 27017
