nfsattacheddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfspvc
  namespace: krishna
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nfspvcvolume
  template:
    metadata:
      name: nfspvccon
      namespace: krishna
      labels:
        app: nfspvcvolume
    spec:
      containers:
         - name: nfsvolumecon
           image: mongo
           ports:
            - containerPort: 27017
           resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 150Mi
           volumeMounts:
             - name: mongonfs
               mountPath: /data/db
      volumes:
            - name: mongonfs
              persistentVolumeClaim:
                claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata: 
   name: mongonfsservice
   namespace: krishna
spec:
  selector:
    app: nfspvcvolume
  ports:
    - port: 27017
      targetPort: 27017
