secretconfideploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: withconfigsecrets
  namespace: krishna
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secretsconfig
  template:
    metadata:
      name: secretsconfigpod
      namespace: krishna
      labels:
        app: secretsconfig
    spec:
      containers:
        - name: mongocon
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 150m
              memory: 150Mi
          volumeMounts:
            - name: mongovol
              mountPath: /data/db
      volumes:
        - name: mongovol
          hostPath:
            path: /mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  namespace: krishna
spec:
  selector:
    app: secretsconfig
  ports:
    - port: 27017
      targetPort: 27017
